changes in dashboard jobsite documents and customer index page

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -5,7 +5,7 @@
       <td><%= link_to 'Customer',  customers_path %></td>
       <td></td>
       <td></td>
-      <td><%= link_to 'Job',  new_job_path %></td>
+      <td><%= link_to 'Job',  jobs_path %></td>
     </tr>
     <tr>
       <td></td>
@@ -14,7 +14,7 @@
       <td></td>
     </tr>
     <tr>
-      <td><%= link_to 'Contact',  new_contact_path %></td>
+      <td><%= link_to 'Contact',  contacts_path %></td>
       <td></td>
       <td></td>
       <td><%= link_to_function "Calender","alert('coming soon!'); return false;" %></td>
