--- a/app/views/jobs/index.html.erb
+++ b/app/views/jobs/index.html.erb
@@ -16,6 +16,11 @@
 <table class="table">
   <table class="table table-striped">
     <tr>
+      <th colspan="8">
+        <%= link_to "Add New Job", new_job_path %>
+      </th>
+    </tr>
+    <tr>
       <th>Reference no</th>
       <th>Date</th>
       <th>Status</th>
