Added changes into users

--- a/app/views/jobsites/ajax_show.js.erb
+++ b/app/views/jobsites/ajax_show.js.erb
@@ -1,1 +1,6 @@
-  $('#jobsite').html("<%= escape_javascript(render(:partial => 'jobsites')) %> ");
+$('#jobsite').html("<%= escape_javascript(render(:partial => 'jobsites')) %> ");
+<% if @edit == "edit" %>
+  window.location.href = '/customers/<%= session[:customer_id] %>/edit'
+<% else %>
+  window.location.reload();
+<% end %>
