--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@user,  :remote => true) do |f| %>
+<%= form_for @user,:url =>create_user_path(@user),  :remote => true do |f| %>
   <table width="100%;">
     <tr>
       <td>
