--- a/app/views/notes/_notes.html.erb
+++ b/app/views/notes/_notes.html.erb
@@ -8,10 +8,10 @@
       <!-- image section -->
       <div id="image">
         <div id="img">
-          <%= image_tag "user.png", :width => "80px", :height => "80px" %>
+          <%= image_tag "user.png", :width => "50px", :height => "50px" %>
         </div>
         <div id="desc">
-          Bob fieldGuy
+          <%= current_company.name %>
         </div>
       </div>
 
