--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -10,13 +10,16 @@
     </tr>
 
     <% users.each do |user| %>
-    <% role = Role.find_by_id(user.role_id) %>
+      <% role = Role.find_by_id(user.role_id) %>
       <tr id="user_<%= user.id %>">
         <td><%= user.name %></td>
         <td><%= user.accounting_type %></td>
         <td><%= user.accounting_name %></td>
         <td><%= role.present? ? role.roll : "" %></td>
-        <td><%= link_to "Edit", edit_user_path(user), :remote => true %> | <%= link_to 'Remove', user, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %></td>
+        <td>
+          <%= link_to image_tag("edit.png", :title => "Edit", :width => "24px", :height => "24px"), edit_user_path(user), :remote => true %> |
+          <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), user, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
+        </td>
       </tr>
     <% end %>
 
