--- a/app/assets/stylesheets/items.css.scss
+++ b/app/assets/stylesheets/items.css.scss
@@ -2,63 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-#item_description{
-    background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    width: 180px;
-    padding :4px 0px;
-}
-
-#item_unit_cost{
+#item_form input[type="text"]{
 background-color: #FFFFFF;
     border: 1px solid #CCCCCC;
     width: 180px;
     padding :4px 0px;
 }
 
-#item_unit_price{
-    background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    width: 180px;
-    padding :4px 0px;
-}
 
-#item_qty{
-background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    width: 180px;
-    padding :4px 0px;
-}
 
-#item_job_item{
-background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    width: 180px;
-    padding :4px 0px;
-}
-
-#search{
-  padding-left: 72px;
-  padding : 4px, 0px;
-}
-
-#item_itemtype{
-background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    width: 180px;
-    padding :4px 0px;
-}
-
-#item_name{
-background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    width: 180px;
-    padding :4px 0px;
-}
-
-#item_number{
-background-color: #FFFFFF;
-    border: 1px solid #CCCCCC;
-    width: 180px;
-    padding :4px 0px;
-}
