--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -38,7 +38,9 @@
   <div class="field">
     <%= f.label :city,"city, st, zip"%>
     <%=f.text_field :city, :style => "width:220px" %>
+
     <%= f.text_field :state, :style => "width:80px" %>
+    
     <%= f.text_field :zip, :style => "width:80px" %>
   </div>
 
@@ -62,8 +64,12 @@
 
   <div class="field">
     <%= f.label :phone%>
-    <%= f.text_field :phone %>
+    <%= f.text_field :phone1, :size => 3, :maxlength => 3,:value =>@phone1.blank? ? @customer.phone1 : @phone1, :style => "height: 25px;    padding: 3px 10px;width: 50px; ", :onkeyup => "phone_validate(this,2)" %>
+    <%= f.text_field :phone2, :size => 3, :maxlength => 3,:value =>@phone2.blank? ? @customer.phone2 : @phone2, :style => "height: 25px;   margin-left: 2px;  width: 50px;  margin-top: 0px; padding: 3px 10px;", :onkeyup => "phone_validate(this,3)" %>
+    <%= f.text_field :phone3, :size => 4, :maxlength => 4,:value =>@phone3.blank? ? @customer.phone3 : @phone3, :style => "height: 25px;  margin-left: 2px;   width: 50px;  margin-top: 0px;   padding: 3px 10px;", :onkeyup => "phone_validate(this,3)" %>
+    <%= f.text_field :phone4, :size => 4, :maxlength => 4,:value =>@phone4.blank? ? @customer.phone4 : @phone4, :style => "height: 25px;    padding: 3px 10px; width: 50px;  margin-left: 2px;margin-top: 0px;", :onkeyup => "phone_validate(this,4)", :placeholder => "Ext.." %>
   </div>
+  
 
   <div class="field">
     <%= f.label :website%>
