--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@item) do |f| %>
+<%= form_for(@item, :remote => true) do |f| %>
   <% if @item.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@item.errors.count, "error") %> prohibited this item from being saved:</h2>
@@ -14,8 +14,8 @@
 <%= f.hidden_field :job_id, :value => @job_id %>
 <%= f.hidden_field :customer_id, :value => @customer_id %>
 <%= f.hidden_field :jobsite_id, :value => @jobsite_id %>
-<div>
-<div class ="field">
+
+  <div class ="field">
   <%= f.label :itemtype,"Type" %>
   <%= f.text_field :itemtype %>
 </div>
@@ -59,6 +59,5 @@
 
 <div class ="actions">
   <%= f.submit "Save", :class => "btn-success"  %>
-</div>
 </div>
 <% end %>
