--- a/app/views/items/edit.js.erb
+++ b/app/views/items/edit.js.erb
@@ -1,1 +1,1 @@
-$("#item_form").html("<%= escape_javascript(render(:partial => 'edit')) %>")
+$("#item_form").html("<%= escape_javascript(render(:partial => 'form')) %>")
