--- a/app/views/items/update.js.erb
+++ b/app/views/items/update.js.erb
@@ -1,5 +1,5 @@
 <% if @update_status == true %>
   $('#items').html("<%= escape_javascript(render(:partial => 'items', :locals => {:items => @items})) %> ");
 <% else %>
-  $("#item_form").html("<%= escape_javascript(render(:partial => 'edit')) %>")
+  $("#item_form").html("<%= escape_javascript(render(:partial => 'form')) %>")
 <% end %>
