--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -57,7 +57,7 @@
       <% end %>
       <%= yield %>
     </div>
-    <div id='overlay' style='filter:alpha(opacity=50);'></div>
+    <div id='overlay' style='filter:alpha(opacity=50);' onclick="hide_popup();"></div>
     <div align='left' id='popup_box'>
       <div style='float: right; margin-top: -40px;margin-right:-40px'>
       </div>
