--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -14,6 +14,7 @@
 
   <%= text_field_tag :add_item %>
   <%= link_to :add_item, new_item_path %>
+  <%= link_to_function "Add_Item", "item_new_form('#{item.id}')" %></td>
 </div>
 
 <table class ="table table-striped ">
@@ -40,12 +41,7 @@
   <% end %>
 </table>
 
-<script>
-  $(document).ready(function() {
-/* Activating Best In Place */
-jQuery(".best_in_place").best_in_place()
-});
-</script>
+
 
 
 
