--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -61,7 +61,7 @@
       <div style='float: right; margin-top: -40px;margin-right:-40px'>
       </div>
       <div id='popup_body' style='float:left'></div>
-
+    </div>
     <div id='ajax_loader_big_div'>
       <img alt="Ajax-loader-big" src="/assets/ajax-loader-big.gif"  />
 
