--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -1,34 +1,31 @@
 <%= form_for(@item) do |f| %>
 
   <div id ="item_form">
-    <div class ="field">
-      <%= f.label :qty, "Qty" %>
-      <%= f.text_field :qty %>
-    </div>
-
-    <div class ="field">
-      <%= f.label :job_item,"Item" %>
-      <%= text_field_tag :search, params[:search], :placeholder => "Search", :class => "input-small search-query" %>
-    </div>
-
-    <div class ="field">
-      <%= f.label :description %>
-      <%= f.text_field :description %>
-    </div>
-
-    <div class ="field">
-      <%= f.label :unit_cost %>
-      <%= f.text_field :unit_cost %>
-    </div>
-
-    <div class ="field">
-      <%= f.label :unit_price %>
-      <%= f.text_field :unit_price %>
-    </div>
-
-    <div class ="actions">
-      <%= f.submit "save", :class => "btn-success" %>
-    </div>
+    <table style="border:none;">
+      <tr>
+        <td><%= f.label :qty, "Qty" %></td>
+        <td><%= f.text_field :qty %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :job_item,"Item" %></td>
+        <td><%= text_field_tag :search, params[:search], :placeholder => "Search", :class => "input-small search-query" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :description %></td>
+        <td><%= f.text_field :description %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :unit_cost %></td>
+        <td><%= f.text_field :unit_cost %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :unit_price %></td>
+        <td><%= f.text_field :unit_price %></td>
+      </tr>
+      <tr>
+        <td colspan="2"><%= f.submit "save", :class => "btn-success" %></td>
+      </tr>
+    </table>
   </div>
 <% end %>
 
