--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -16,51 +16,42 @@
 <%= f.hidden_field :jobsite_id, :value => @jobsite_id %>
 
 <div id ="item_form">
-  <div class ="field">
-  <%= f.label :itemtype,"Type" %>
-  <%= f.text_field :itemtype %>
-</div>
-
-
-<div class ="field">
-  <%= f.label :qty,"Qty" %>
-  <%= f.text_field :qty %>
-  
-</div>
-
-<div class ="field">
-  <%= f.label :number, "Number" %>
-  <%= f.text_field :number %>
-</div>
-
-<div class ="field">
-  <%= f.label :name, "Name" %>
-  <%= f.text_field :name %>
-</div>
-
-<div class ="field">
-  <%= f.label :description, "Description" %>
-  <%= f.text_field :description %>
-</div>
-
-<div class ="field">
-  <%= f.label :unit_cost %>
-  <%= f.text_field :unit_cost %>
-</div>
-
-<div class ="field">
-  <%= f.label :unit_price %>
-  <%= f.text_field :unit_price %>
-</div>
-
-<div class  ="field">
-  <%= f.label :job_item,"Item" %>
-  <%= f.text_field :job_item %>
-</div>
-
-<div class ="actions">
-  <%= f.submit "Save", :class => "btn-success"  %>
-</div>
-
+  <table style="border:none;">
+       <tr>
+        <td><%= f.label :itemtype, "Type" %></td>
+        <td><%= f.text_field :itemtype %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :qty, "Qty" %></td>
+        <td><%= f.text_field :qty %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :number, "Number" %></td>
+        <td><%= f.text_field :number  %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :name, "Name" %></td>
+        <td><%= f.text_field :name  %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :description %></td>
+        <td><%= f.text_field :description %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :unit_cost %></td>
+        <td><%= f.text_field :unit_cost %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :unit_price %></td>
+        <td><%= f.text_field :unit_price %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :job_item,"Item" %></td>
+        <td><%= f.text_field :job_item %></td>
+      </tr>
+      <tr>
+        <td colspan="2"><%= f.submit "save", :class => "btn-success" %></td>
+      </tr>
+    </table>
 </div>
 <% end %>
