--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,4 +1,3 @@
-
 <%= render '/layouts/job_with_action' %>
 <%= render '/layouts/tab_panel_for_job' %>
 
@@ -28,14 +27,13 @@
 
 
   <% @items.each do |item| %>
-    <tr id="item_<%= item.id %>">
-
+    <tr>
       <td><%= item.itemtype %></td>
       <td><%= best_in_place item,:qty ,:type => :input%></td>
       <td><%= item.number %></td>
       <td><%= item.name %></td>
       <td><%= item.description %></td>
-      <td><%= link_to_function image_tag("edit.png", :title => "Edit", :width => "24px", :height => "24px"), "item_edit_form('#{item.id}')" %>|
+      <td><%= link_to_function image_tag("edit.png", :title => "Edit", :width => "24px", :height => "24px"), "item_edit_form('#{item.id}')" %>
         <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
     </tr>
   <% end %>
