added before_filter :is_login action in all the controllers

--- a/app/views/jobsites/index.html.erb
+++ b/app/views/jobsites/index.html.erb
@@ -17,5 +17,8 @@
         <td><%= jobsite.zip %></td>
       </tr>
     <% end %>
+      <tr>
+        <td><%= will_paginate @jobsites %></td>
+      </tr>
   </table>
 </table>
