added search and tab panel in jobsite and given color:#333 for hover link in tabbed panel

--- a/app/views/jobsites/index.html.erb
+++ b/app/views/jobsites/index.html.erb
@@ -1,4 +1,6 @@
 <%= render '/layouts/customer_with_action' %>
+<%= render 'tabbed' %>
+<%= render 'search' %>
 <table class="table">
   <table class="table table-striped">
     <tr>
