--- a/app/views/layouts/_tab_panel_for_customer.erb
+++ b/app/views/layouts/_tab_panel_for_customer.erb
@@ -1,26 +1,26 @@
 <ul class="nav nav-tabs" id="myTab">
     <li class = <%= params[:controller] == "customers" || params[:action] == "new" ? 'active' : ''  %> >
-    <%= link_to 'Customer',new_customer_path %>
+    <%= link_to 'Customer', new_customer_path, :title => "Customer New Page" %>
     </li>
 
      <li class = <%= params[:controller] == "jobs" && params[:action] == "index" ? 'active' : ''  %> >
-    <%= link_to 'Jobs', jobs_path %>
+    <%= link_to 'Jobs', jobs_path, :title => "Jobs index page" %>
     </li>
 
     <li class = <%= params[:controller]=="notes" ? 'active' : ''  %> >
-      <%= link_to "Notes", notes_path(:type => "Customer") %>
+      <%= link_to "Notes", notes_path(:type => "Customer"), :title => "list customer notes" %>
     </li>
 
     <li class = <%= params[:controller] == "contacts" && params[:action] == "index" ? 'active' : ''  %> >
-      <%= link_to "Contact", contacts_path%>
+      <%= link_to "Contact", contacts_path, :title => "list contacts" %>
     </li>
 
     <li class = <%= params[:controller] == "documents" ? 'active' : ''  %>>
-      <%= link_to "Documents", documents_path(:type => "Customer")%>
+      <%= link_to "Documents", documents_path(:type => "Customer"), :title => "list customer documents" %>
     </li>
 
     <li>
-      <%= link_to_function "Custom", "alert('coming soon!'); return false;" %>
+      <%= link_to_function "Custom", "alert('coming soon!'); return false;", :title => "custome page" %>
     </li>
 
     </ul>
