--- a/app/views/layouts/_tab_panel_for_job.erb
+++ b/app/views/layouts/_tab_panel_for_job.erb
@@ -1,31 +1,31 @@
 <ul class = "nav nav-tabs" id="job_tabs">
   <li class = <%= params[:controller] == "jobs" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
-    <%= link_to "Job", new_job_path  %>
+    <%= link_to "Job", new_job_path, :title => "Job new page"  %>
   </li>
 
 
    <li class =" <%= params[:controller] == "notes" ? 'active' : ''  %> ">
-    <%= link_to "Notes", notes_path(:type => "Job") %>
+    <%= link_to "Notes", notes_path(:type => "Job"), :title => "list job notes" %>
   </li>
 
   <li>
-    <%= link_to_function "Times", "alert('comming soon!'); return false;" %>
+    <%= link_to_function "Times", "alert('comming soon!'); return false;", :title => "list job times" %>
   </li>
 
   <li class="<%= params[:controller] == "items" ? 'active' : ''  %> " >
-    <%= link_to_function "Items", "alert('comming soon!'); return false;"  %>
+    <%= link_to_function "Items", "alert('comming soon!'); return false;", :title => "list job items" %>
   </li>
 
   <li class = <%= params[:controller] == "documents" ? 'active' : '' %> >
-    <%= link_to "Documents", documents_path(:type => "Job") %>
+    <%= link_to "Documents", documents_path(:type => "Job"), :title => "list job documents" %>
   </li>
 
   <li class = <%= params[:controller] == "customs" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
-    <%= link_to_function "Custom", "alert('coming soon!'); return false;"%>
+    <%= link_to_function "Custom", "alert('coming soon!'); return false;", :title => "Job custom page" %>
   </li>
   
   <li class = <%= params[:controller] == "job_histories" && (params[:action] == "new" || params[:action] == "edit" )? 'active' : '' %> >
-    <%= link_to_function "Job History", "alert('coming soon!'); return false;" %>
+    <%= link_to_function "Job History", "alert('coming soon!'); return false;", :title => "Job history page" %>
   </li>
 </ul>
 
