changes for user sign-in in all the controllers

--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -46,11 +46,11 @@
 
   <div class="field">
     <%= label_tag :contact %>
-    <% if current_company.contacts.empty? %>
+    <% if current_login.contacts.empty? %>
     <span style="color: red;">NO CONTACTS</span>
     <% else %>
 
-      <%= f.select :contact_id, options_for_select(current_company.contacts.map{|contact| [contact.name, contact.id]},:selected => @customer.contact_id),{}, :onchange => "GetContact(this)" %>
+      <%= f.select :contact_id, options_for_select(current_login.contacts.map{|contact| [contact.name, contact.id]},:selected => @customer.contact_id),{}, :onchange => "GetContact(this)" %>
 
     <% end %>
     <div id="contact34">
