--- a/app/views/jobs/_form.html.erb
+++ b/app/views/jobs/_form.html.erb
@@ -41,10 +41,10 @@
   </div>
   <div class="field">
     <%= label_tag :job_contact %>
-    <% if current_company.contacts.empty? %>
+    <% if current_login.contacts.empty? %>
       <span style="color: red;">NO CONTACTS</span>
     <% else %>
-      <%= f.select :contact_id, options_for_select(current_company.contacts.map{|contact| [contact.name, contact.id]},:selected => @job.contact_id),{},:onchange => "GetContact(this)" %>
+      <%= f.select :contact_id, options_for_select(current_login.contacts.map{|contact| [contact.name, contact.id]},:selected => @job.contact_id),{},:onchange => "GetContact(this)" %>
     <% end %>
     <div id="contact34">
     </div>
