--- a/app/views/layouts/_customer_with_action.html.erb
+++ b/app/views/layouts/_customer_with_action.html.erb
@@ -3,10 +3,10 @@
 
   <% elsif params[:controller]=="customers" && params[:action]=="edit"  %>
     Customer :
-    <%= f.select :customers, options_for_select(["All"]+current_company.customers.map{|customer| [customer.company_name, customer.id]}, :selected => ( params[:cust_id] ? params[:cust_id] : session[:customer_id]) ), {}, :onchange => "getEditJobsite(this, 'edit');" %>
+    <%= f.select :customers, options_for_select(["All"]+current_login.customers.map{|customer| [customer.company_name, customer.id]}, :selected => ( params[:cust_id] ? params[:cust_id] : session[:customer_id]) ), {}, :onchange => "getEditJobsite(this, 'edit');" %>
   <% else %>
     Customer :
-    <%= f.select :customers, options_for_select(["All"]+current_company.customers.map{|customer| [customer.company_name, customer.id]}, :selected => ( params[:cust_id] ? params[:cust_id] : session[:customer_id]) ), {}, :onchange => "getJobsite(this);" %>
+    <%= f.select :customers, options_for_select(["All"]+current_login.customers.map{|customer| [customer.company_name, customer.id]}, :selected => ( params[:cust_id] ? params[:cust_id] : session[:customer_id]) ), {}, :onchange => "getJobsite(this);" %>
   <% end %>
 
   <%= f.select :actions, options_for_select([["Actions", ""], ["Add Customer", new_customer_path],
