--- a/app/views/notes/_notes.html.erb
+++ b/app/views/notes/_notes.html.erb
@@ -11,7 +11,7 @@
           <%= image_tag "user.png", :width => "50px", :height => "50px" %>
         </div>
         <div id="desc">
-          <%= current_company.name %>
+          <%= current_login.name %>
         </div>
       </div>
 
