changes in notes _form page

--- a/app/views/customers/_search.html.erb
+++ b/app/views/customers/_search.html.erb
@@ -5,6 +5,6 @@
 <div>
   <%= form_tag :customers, :method => 'get', :class => "form-search" do |f|  %>
     <%= text_field_tag :search, params[:search], :placeholder => "Search by Name", :class => "input-large search-query" %> &nbsp;
-    <%= button_tag :button, :style => "height:40px; width: 80px;"%>
+    <%= button_tag "search", :style => "height:40px; width: 80px;"%>
   <% end %>
 </div>
