--- a/app/views/documents/index.html.erb
+++ b/app/views/documents/index.html.erb
@@ -12,7 +12,7 @@
     <%= form_tag :documents, :method => 'get', :class => "form-search" do |f|  %>
     <%= text_field_tag :search, params[:search], :placeholder => "Search", :class => "input-large search-query" %> &nbsp;
     <%= hidden_field_tag :type ,params[:type] %>
-    <%= button_tag :button, :style => "height:40px; width: 80px;" %>
+    <%= button_tag "search", :style => "height:40px; width: 80px;" %>
 <% end %>
 </div>
 <hr />
