--- a/app/views/notes/_form.html.erb
+++ b/app/views/notes/_form.html.erb
@@ -1,19 +1,33 @@
 <%= form_for(@note, :url => notes_path(:type => params[:type]), :remote => true) do |f| %>
   <table width="100%">
-        <%= f.hidden_field :notable_id, :value => session[:customer_id] %>
-        <%= f.hidden_field :notable_type, :value => params[:type] %>
-        <%= f.hidden_field :jobsite_id, :value => session[:jobsite_id] %>
+    <%= f.hidden_field :notable_id, :value => session[:customer_id] %>
+    <%= f.hidden_field :notable_type, :value => params[:type] %>
+    <%= f.hidden_field :jobsite_id, :value => session[:jobsite_id] %>
     <tr style="background:#666; color: #FFF; font-weight: bold;">
-      <td>Please Select customer and jobsite for this note first</td>
+      <td id="error">Please select Customer and Note Type</td>
     </tr>
     <tr>
       <td>
         <%= f.select :note_type, [["Site Notes", "Site Notes"],["Service Request", "Service Request"], ["Service Performed", "Service Performed"], ["Private", "Private"], ["Customer", "Customer"], ["System Notes", "System Notes"]],:selected => @note.note_type%>
         <%= f.text_area :description, :style => "width:350px;", :rows => 1 %>
-        <%= f.submit "Add Note", :style => "padding: 10px;" %></td>
+        <%= f.submit "Add Note", :onclick => "
+                var error = document.getElementById('error');
+                var note_type = document.getElementById('note_note_type');
+                var notable_type = document.getElementById('note_notable_id');
+
+                error.style.background='#666';
+                error.innerHTML='Please select Customer and Note Type';
+
+                if(note_type.value == '' || notable_type.value == 'All'){
+                  error.style.background='#DE652C';
+                  error.innerHTML = 'Please Select Customer and Note Type';
+                  return false
+                }
+        ", :style => "padding: 10px;" %></td>
     </tr>
   </table>
 <% end %>
+
 <style>
   td, th {
     text-align: left;
