--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,13 +5,13 @@
 
 <div>
   <%= label_tag :Subtotal %>
-  <%= text_field_tag :subtotal %>
+  <%= text_field_tag :sub_total,'' %>
 </div>
 
 <div>
   <%= label_tag :add_item,"Add Item" %>
-
-  <%= text_field_tag :add_item %>
+  <%= text_field_tag :item_names,'',:size => 75, :id => 'auto_complete_text' %>
+  <ul id="auto_results"></ul>
   <%= link_to_function "Add Item", "new_item_form(#{@item_id})" %>
 </div>
 
@@ -22,7 +22,7 @@
     <th>Number</th>
     <th>Name</th>
     <th>Description</th>
-    <th></th>
+    <th>Action</th>
   </tr>
 
 
@@ -34,14 +34,22 @@
       <td><%= item.name %></td>
       <td><%= item.description %></td>
       <td><%= link_to_function image_tag("edit.png", :title => "Edit", :width => "24px", :height => "24px"), "item_edit_form('#{item.id}')" %>
-        <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), item, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), item, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
     </tr>
   <% end %>
 </table>
-
-
-
-
-
-
-
+<script type="text/javascript">
+  $("#auto_complete_text").keyup(function(){
+    var n = $(this).val().split(',').length
+    var data = $(this).val().split(',')[n-1];
+    $.ajax({
+      url:'/items/autocomplete_items',
+      data:{
+        name:data,
+        not_list:$(this).val()
+      },
+      type:'GET',
+      success:function(data){}
+    });
+  });
+</script>
