--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -7,9 +7,9 @@
         <td><%= f.text_field :qty %></td>
       </tr>
       <tr>
-        <td><%= label_tag :item,"Item" %></td>
-        <td><%= text_field_tag :item_names,'',:size => 75, :id => 'edit_auto_complete_text' %>
-        <ul id="edit_auto_results"></ul></td>
+        <td><%= f.label :name, "Item" %></td>
+        <td><%= f.text_field :name %>
+        
       <tr>
         <td><%= f.label :description %></td>
         <td><%= f.text_field :description %></td>
