made some changes in items

--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -5,7 +5,7 @@
 
 <div>
   <%= label_tag :Subtotal %>
-  <%= text_field_tag :sub_total,'' %>
+  <%= text_field_tag :sub_total,'' ,:readonly => true%>
 </div>
 
 <div>
