changed css files

--- a/app/views/dashboards/index.html.erb
+++ b/app/views/dashboards/index.html.erb
@@ -1,6 +1,6 @@
 <br/><br/><br/><br/>
 <div id="dsh_box">
-  <table width="100%" cellpadding="10px;" border="0">
+  <table cellpadding="10px;" border="0">
     <tr>
       <td><%= link_to 'Customer',  customers_path %></td>
       <td></td>
