--- a/app/views/jobsites/index.html.erb
+++ b/app/views/jobsites/index.html.erb
@@ -20,7 +20,7 @@
       </tr>
     <% end %>
       <tr>
-        <td><%= will_paginate @jobsites %></td>
+        <td colspan="4"><%= will_paginate @jobsites %></td>
       </tr>
   </table>
 </table>
