some changes made in items

--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -3,7 +3,7 @@
   <div id ="item_form">
     <table style="border:none;">
       <tr>
-        <td><%= f.label :qty, "Qty" %></td>
+        <td width="10%" valign="top"><%= f.label :qty, "Qty" %></td>
         <td><%= f.text_field :qty %></td>
       </tr>
       <tr>
