--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -63,6 +63,12 @@
       </div>
       <div id='popup_body' style='float:left'></div>
     </div>
+    <div id='overlay1' style='filter:alpha(opacity=50);' onclick="hide_popup1();"></div>
+    <div align='left' id='popup_box1'>
+      <div style='float: right; margin-top: -40px;margin-right:-40px'>
+      </div>
+      <div id='popup_body1' style='float:left'></div>
+    </div>
     <div id='ajax_loader_big_div'>
       <img alt="Ajax-loader-big" src="/assets/ajax-loader-big.gif"  />
 
