--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -159,16 +159,41 @@ tr.odd{
 }
 
 #popup_box {
-    width: 300px;
+    width: 230px;
     background: lightgray;
     display: none;
-    height: 450px;
+    height: 380px;
     left: 35%;
-    margin: -280px 0 0 150px;
+    margin: -290px 0 0 150px;
     position: fixed;
     top: 70%;
     z-index: 1001;   
 }
+
+#overlay1{
+    display: none;
+    background-color:#000000;
+    height:100%;
+    left:0;
+    position:fixed;
+    top:0;
+    width:100%;
+    z-index: 1000;
+    opacity: 0.5;
+}
+
+#popup_box1 {
+    width: 230px;
+    background: lightgray;
+    display: none;
+    height: 300px;
+    left: 35%;
+    margin: -290px 0 0 150px;
+    position: fixed;
+    top: 70%;
+    z-index: 1001;
+}
+
 
 #item_form {
     height: 200px;
@@ -178,7 +203,7 @@ tr.odd{
     margin: -280px 0 0 150px;
     position: fixed;
     top: 70%;
-    z-index: 1001;    
+    z-index: 1001;
 }
 
 #ajax_loader_big_div{
@@ -201,7 +226,10 @@ tr.odd{
 #item_form input[type="text"]{
     background-color: #FFFFFF;
     border: 1px solid #CCCCCC;
-    width: 180px;
+    width: 120px;
     padding :4px 0px;
 }
 
+.form_in_place input[type="text"]{
+    width :60px;
+}
