--- a/app/views/users/_users.html.erb
+++ b/app/views/users/_users.html.erb
@@ -18,7 +18,7 @@
         <td><%= role.present? ? role.roll : "" %></td>
         <td>
           <%= link_to image_tag("edit.png", :title => "Edit", :width => "24px", :height => "24px"), edit_user_path(user), :remote => true %> |
-          <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), user, method: :delete, data: { confirm: 'Are you sure?' }, remote: true %>
+          <%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), user, :method => :delete, :data => { :confirm => 'Are you sure?' }, :remote => true %>
         </td>
       </tr>
     <% end %>
