--- a/app/views/items/_edit.html.erb
+++ b/app/views/items/_edit.html.erb
@@ -23,9 +23,14 @@
         <td><%= f.text_field :unit_price %></td>
       </tr>
       <tr>
-        <td colspan="2"><%= f.submit "save", :class => "btn-success" %></td>
+        <td colspan="2" style ="text-align: center;"><%= f.submit "save", :class => "btn-success" %></td>
       </tr>
     </table>
   </div>
 <% end %>
 
+<style>
+  td, th {
+    text-align: left;
+  }
+</style>
