Changes for item management

--- a/app/views/layouts/_tab_panel_for_job.erb
+++ b/app/views/layouts/_tab_panel_for_job.erb
@@ -12,7 +12,7 @@
     <%= link_to_function "Times", "alert('comming soon!'); return false;", :title => "list job times" %>
   </li>
 
-  <li class="<%= params[:controller] == "items" ? 'active' : ''  %> " >
+  <li class="<%= params[:controller] == "inventories" ? 'active' : ''  %> " >
     <%= link_to "Items", inventories_path %>
   </li>
 
