--- a/app/views/inventories/index.html.erb
+++ b/app/views/inventories/index.html.erb
@@ -5,26 +5,9 @@
   <%= label_tag :add_item,"Add Item" %>
   <%= text_field_tag :item_names,'',:size => 75, :id => 'auto_complete_text' %>
   <ul id="auto_results"></ul>
-  <%= link_to "Add Item", new_item_path %>
+  <%#= link_to "Add Item", new_item_path %>
 </div>
 
 <div id="inventories">
   <%= render :partial => "items/index", :locals => {:inventories => @inventories} %>
 </div>
-
-
-<script type="text/javascript" >
-  $("#auto_complete_text").keyup(function(){
-    var n = $(this).val().split(',').length
-    var data = $(this).val().split(',')[n-1];
-    $.ajax({
-      url:'/items/autocomplete_items',
-      data:{
-        name:data,
-        not_list:$(this).val()
-      },
-      type:'GET',
-      success:function(data){}
-    });
-  });
-</script>
