--- a/app/views/items/_index.html.erb
+++ b/app/views/items/_index.html.erb
@@ -1,4 +1,4 @@
-<table class ="table table-striped ">
+<table id="sub_total" class ="table table-striped ">
   <tr>
     <th>Type</th>
     <th>Qty</th>
@@ -8,16 +8,28 @@
     <th>Subtotal</th>
     <th>Action</th>
   </tr>
-  
-<% @inventories.each do |inventory| %>
-<tr>
-  <td><%= inventory.itemtype %></td>
-  <td><%= best_in_place inventory,:qty ,:type => :input, :style => "height: 25px;   margin-left: 2px;  width: 50px;  margin-top: 0px; padding: 3px 10px;"%></td>
-  <td><%= inventory.number %></td>
-  <td><%= inventory.name %></td>
-  <td><%= inventory.description %></td>
-  <td><%= inventory.subtotal %></td>
-  <td><%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), inventory, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
- </tr>
- <% end %>
+
+  <% inventories.each do |inventory| %>
+    <tr>
+      <td><%= inventory.itemtype %></td>
+      <td id="quantity_<%= inventory.id %>"><div onclick="inplace_edit_quantity('<%= inventory.id %>')"><%= inventory.qty%></div>
+        <div id="qty_<%= inventory.id %>" style="display:none;"></div>
+      </td>
+      <td><%= inventory.number %></td>
+      <td><%= inventory.name %></td>
+      <td><%= inventory.description %></td>
+      <td class="inv_me"><%= inventory.subtotal %></td>
+      <td><%= link_to image_tag("delete.png", :title => "Delete", :width => "24px", :height => "24px"), inventory, :method => :delete, :data => { :confirm => 'Are you sure?' } %></td>
+    </tr>
+  <% end %>
 </table>
+<script type="text/javascript">
+  var tds = document.getElementById('sub_total').getElementsByTagName('td');
+  var sum = 0;
+  for(var i = 0; i < tds.length; i ++) {
+    if(tds[i].className == 'inv_me') {
+      sum += isNaN(tds[i].innerHTML) ? 0 : parseFloat(tds[i].innerHTML);
+    }
+  }
+  document.getElementById('sub_total').innerHTML += '<tr><td colspan="5"></td><td>' + sum + '</td><td>total</td></tr>';
+</script>
